--- a/framework/styles/sass/_modals.sass
+++ b/framework/styles/sass/_modals.sass
@@ -90,9 +90,7 @@
       text-transform: uppercase
       +transition(transform 750ms cubic-bezier(0,.8,0,1))
 
-    &[data-section-name="single"],
-    &[data-section-name="slide"]
-      .title
+      &[data-animation-type="slide"]
         &.passive
           +translateX(-40%)
 
