--- a/framework/styles/sass/_elements.sass
+++ b/framework/styles/sass/_elements.sass
@@ -22,7 +22,7 @@
 
     &:hover
       border-color: $blue--light
-      +shadow
+      +hover-shadow
 
     .thumbnail
       position: relative
@@ -31,7 +31,7 @@
       margin-bottom: 20px
 
       .icon
-        +app-card-icon()
+        +app-card-icon
 
     .name
       font-weight: $bold
