--- a/framework/styles/sass/_mixins.sass
+++ b/framework/styles/sass/_mixins.sass
@@ -46,13 +46,13 @@
 /*-------------------------*\
  * SHADOW HOVER
 /*-------------------------*/
-=shadow
+=hover-shadow
   +box-shadow(0 1px 2px 0 $b-05,0 4px 8px 0 $b-10)
 
 /*-------------------------*\
  * APP CARD ICON
 /*-------------------------*/
-=app-card-icon($bg-color: $gray--lightest)
+=app-card-icon($bg-color: $gray--lighter)
   position: absolute
   top: 0
   left: 0
