--- a/framework/styles/sass/_modals.sass
+++ b/framework/styles/sass/_modals.sass
@@ -22,7 +22,7 @@
 
   &__container
     position: fixed
-    top: 50%
+    top: 0
     left: 50%
     width: 100%
     max-width: 620px
@@ -34,11 +34,11 @@
     visibility: hidden
     overflow: hidden
     z-index: 10
-    +translate(-50%, -40%)
-    +transition(opacity 177ms, visibility 177ms, transform 610ms cubic-bezier(0,.8,0,1))
+    +translate(-50%, 100%)
+    +transition(opacity 177ms, visibility 177ms, transform 610ms ease-out)
 
     &:first-of-type
-      +translate(-50%, -48%)
+      +translate(-50%, 2%)
       +transition(opacity 610ms, visibility 610ms, transform 610ms cubic-bezier(0,.8,0,1))
 
     &:before
@@ -54,7 +54,7 @@
     &.active
       opacity: 1
       visibility: visible
-      +translate(-50%, -50%)
+      +translate(-50%, 0)
 
   &__headers
     position: relative
