--- a/framework/styles/css/app.css
+++ b/framework/styles/css/app.css
@@ -1334,6 +1334,7 @@ textarea {
 /*------------------------- */
 button,
 .btn {
+  position: relative;
   display: inline-block;
   padding: 5px 30px;
   border: 2px solid;
@@ -1427,6 +1428,67 @@ button,
     .btn.blue--borderless {
       border: none;
       color: #2990ea; }
+  button.svg,
+  .btn.svg {
+    width: 173px;
+    height: 43px;
+    border-color: #d4d5d6;
+    color: #2990ea; }
+    button.svg .value,
+    .btn.svg .value {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      line-height: 43px; }
+  button--svg,
+  .btn--svg {
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    width: 175px;
+    height: 45px;
+    fill: none; }
+    button--svg:hover .path,
+    .btn--svg:hover .path {
+      stroke: #b7bbbd; }
+    button--svg .path,
+    .btn--svg .path {
+      stroke: #d4d5d6;
+      stroke-linecap: round;
+      stroke-width: 2;
+      -o-transition: stroke 233ms;
+      transition: stroke 233ms; }
+      @media screen and (-webkit-min-device-pixel-ratio: 0) {
+        button--svg .path,
+        .btn--svg .path {
+          -webkit-transition: stroke 233ms; } }
+@-moz-document url-prefix() {
+  button--svg .path,
+  .btn--svg .path {
+    -moz-transition: stroke 233ms; } }
+      button--svg .path--loader,
+      .btn--svg .path--loader {
+        stroke: #2990ea;
+        stroke-linecap: round;
+        stroke-width: 2;
+        stroke-dasharray: 400;
+        stroke-dashoffset: 400; }
+        button--svg .path--loader.loading,
+        .btn--svg .path--loader.loading {
+          stroke-dashoffset: 0;
+          -o-transition: stroke-dashoffset 1.5s ease;
+          transition: stroke-dashoffset 1.5s ease; }
+          @media screen and (-webkit-min-device-pixel-ratio: 0) {
+            button--svg .path--loader.loading,
+            .btn--svg .path--loader.loading {
+              -webkit-transition: stroke-dashoffset 1.5s ease; } }
+@-moz-document url-prefix() {
+  button--svg .path--loader.loading,
+  .btn--svg .path--loader.loading {
+    -moz-transition: stroke-dashoffset 1.5s ease; } }
   button i,
   .btn i {
     font-size: 17px; }
