--- a/framework/styles/sass/_modals.sass
+++ b/framework/styles/sass/_modals.sass
@@ -35,7 +35,7 @@
     overflow: hidden
     z-index: 10
     +translate(-50%, 100%)
-    +transition(opacity 177ms, visibility 177ms, transform 610ms ease-out)
+    +transition(opacity 177ms, visibility 177ms, transform 610ms cubic-bezier(0,.8,0,1))
 
     &:first-of-type
       +translate(-50%, 2%)
